--- a/Tareas/Tarea3/app/static/css/informacion-pedido.css
+++ b/Tareas/Tarea3/app/static/css/informacion-pedido.css
@@ -2,52 +2,42 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #e8ddc9;
+    background-color: var(--background-color);
 }
 
-.container {
-    max-width: 800px;
-    margin: 50px auto;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-.container {
-    max-width: 800px;
+.order-container {
+    display: block;
+    flex-direction: column;
+    align-items: start;
     margin: 50px auto;
     padding: 20px;
     background-color: #ffffff;
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    overflow-x: auto;
 }
 
-.container table {
+.order-container table, .order-container {
+    max-width: 100%;
+}
+.order-container table {
+    max-width: 100%;
     width: 100%;
     border-collapse: collapse;
+    word-wrap: break-word;
+    box-sizing: border-box;
 }
 
-.container th, 
-.container td {
+.order-container th,
+.order-container td {
     padding: 12px;
     text-align: left;
     border-bottom: 1px solid #ddd;
 }
 
-.container th {
+.order-container th {
     background-color: #a1cc84;
 }
 
-.container tr:hover {
+.order-container tr:hover {
     background-color: #f5f5f5;
-}
-
-.container{
-    max-width: 800px;
-    margin: 50px auto;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
