--- a/Tareas/Tarea3/app/templates/pedidos/informacion-pedido.html
+++ b/Tareas/Tarea3/app/templates/pedidos/informacion-pedido.html
@@ -3,25 +3,34 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/informacion-pedido.css') }}">
 {% endblock %}
 {% block content %}
-    <div class="container">
-        <h1>Información Pedido</h1>
-        <table>
-            <tr>
-                <th> Tipo</th>
-                <th> Producto(s)</th>
-                <th> Región</th>
-                <th> Comuna</th>
-                <th> Nombre Comprador</th>  
-            </tr>
-            <tr>
-                <td> Fruta, Verdura </td>
-                <td> Durazno, Apio, Lechuga </td>
-                <td> Región Metropolitana </td>
-                <td> Providencia </td>
-                <td> Juan Pérez </td>
-            </tr>
-        </table>
-    </div>
+    <div class="order-container">
+        <h2>Información Pedido</h2>
+        {% if data %}
+            <table>   
+                <tr>
+                    <th> Tipo</th>
+                    <th> Pedido</th>
+                    <th> Descripción</th>
+                    <th> Región</th>
+                    <th> Comuna</th>
+                    <th> Nombre Pedido</th>
+                    <th> Email Pedido</th>
+                    <th> Teléfono Pedido</th>
+                     
+                </tr>
+                <tr>
+                    <td> {{data.tipo}} </td>
+                    <td> {{data.pedidos}} </td>
+                    <td> {{data.descripcion}} </td>
+                    <td> {{data.region}} </td>
+                    <td> {{data.comuna}} </td>
+                    <td> {{data.nombre}} </td>
+                    <td> {{data.email}} </td>
+                    <td> {{data.celular}} </td>
+                </tr>
+            </table>
+        {% endif %}
+    </div>    
 {% endblock content %}
 
 
