--- a/Tareas/Tarea3/app/templates/pedidos/agregar-pedido.html
+++ b/Tareas/Tarea3/app/templates/pedidos/agregar-pedido.html
@@ -36,7 +36,7 @@
                 <option value="none">Seleccionar región</option>
             </select>
 
-            <label for="nombreProductor">Nombre Comprador:</label>
+            <label for="nombreComprador">Nombre Comprador:</label>
             <input type="text" id="nombreComprador" name="nombreComprador" minlength="3" maxlength="80" placeholder="Ej: Juan Pérez">
 
             <label for="emailComprador">Email Comprador:</label>
