--- a/Tareas/Tarea3/app/templates/pedidos/informacion-pedido.html
+++ b/Tareas/Tarea3/app/templates/pedidos/informacion-pedido.html
@@ -16,9 +16,9 @@
                     <th> Descripción</th>
                     <th> Región</th>
                     <th> Comuna</th>
-                    <th> Nombre Pedido</th>
-                    <th> Email Pedido</th>
-                    <th> Teléfono Pedido</th>
+                    <th> Nombre Comprador</th>
+                    <th> Email Comprador</th>
+                    <th> Teléfono Comprador</th>
                      
                 </tr>
                 <tr>
