--- a/Tareas/Tarea3/app/templates/base.html
+++ b/Tareas/Tarea3/app/templates/base.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FrutiVerde Online</title>
+    <style>
+        body {
+            background: url('{{ url_for('static', filename='jpg/background.jpg') }}') no-repeat center center fixed;
+        }
+    </style>
     {% block css %}{% endblock %}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,6 +23,7 @@
         <h1>FrutiVerde Online</h1>
         <div>
             <a class="navbar-page" href="{{ url_for('index') }}">Inicio</a>
+            <a class="navbar-page" href="{{ url_for('stats') }}">Estadísticas</a>
             {% block extras_navbar %} {% endblock %}
         </div>
     </div>
